--- a/styles/main.css
+++ b/styles/main.css
@@ -127,7 +127,8 @@ h1 {
 
 .progress__cover-bar {
     position: absolute;
-    width: 50%;
+    /* width: 50%; */
+    transition: all 0.5s;
     background: #5051f9;
     border-radius: 4px;
     height: 5px;
